--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
     <link href="logo/Reservia@3x.png" rel="shortcut icon" type="text/css">
+    <!-- 777 fontawesome  -->
     <script src="https://kit.fontawesome.com/0da4233e0b.js" crossorigin="anonymous"></script>
     <link type="text/css" rel="stylesheet" href="style.css">
     <link type="text/css" rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- 888 fonts  -->
     <link type="text/css"
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <meta charset="utf-8">
+    <!-- 666 responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservia</title>
 </head>
@@ -20,6 +23,7 @@
             <a class="topbar_logo" href="#"><img src="logo/Reservia.svg" alt="logo of the site Reservia" /></a><!-- role="img" -->
             <a class="inscription" aria-label="Inscription" href="logo/Reservia.svg">S'inscrire</a>
             <div role="group" class="topbar_menu">
+                <!-- 555 anchor to destination  -->
                 <a class="topbar_selection"  aria-label="Accomodation" href="#accomodation">Hébergement</a>
                 <a class="topbar_selection" aria-label="Activities" href="#activities">Activités</a>
             </div>
@@ -30,6 +34,7 @@
                 <p>En plein centre ville ou en pleine nature</p>
             </div>
             <form class="searchbar" role="search" method="POST" action="traitement.php">
+                <!--111 Find your city destination -->
                 <div class="focus" role="group">
                     <label class="hidden" for="city">find your city</label>
                     <span class="fa-map"> <strong aria-hidden="true" class="fas fa-map-marker-alt"></strong ></span>
@@ -43,6 +48,7 @@
                     <span class="click_search">Rechercher</span>
                 </button>
             </form>
+            <!-- 222 thematic -->
             <div class="filter" role="group">
                 <label class="title_list">Filtres</label>
                 <ul class="list_filter">
@@ -65,9 +71,11 @@
                         </button>
                     </li>
                     <li>
+                        <!-- 1313 aria-label  -->
                         <button aria-label="romantic filter" class="item">
                             <span class="choose">Romantique</span>
                             <span class="fa-item">
+                                <!-- 3131 aria hidden -->
                                 <strong aria-hidden="true" class="fas fa-heart"></strong >
                             </span>
                         </button>
@@ -97,6 +105,7 @@
             <aside ><!-- role="complementary" -->
                 <h2 class="popular_title">Les plus populaires<strong aria-hidden="true" class="fas fa-chart-line"></strong ></h2>
                 <div class="popular_article">
+                    <!-- 333 article -->
                     <div role="group" class="popular_housing">
                         <a class="card" aria-label="hotel room in 'Le Soleil du matin'" href="#"><!--hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg-->
                             <div class="popular_picture">
@@ -175,6 +184,7 @@
                     </div>
                 </div>
             </aside>
+            <!-- 555 anchor end  -->
             <article id="accomodation" >
                 <h2 class="accomodation_title">Hébergements à Marseille</h2>
                 <div class="serie">
