suppression d'un commentair

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="topbar_selection" aria-label="Activities" href="#activities">Activités</a>
             </div>
         </header>
-        <nav><!-- role="navigation" -->
+        <nav>
             <div role="group" class="description">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
