--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <p>Afficher plus</p>
                 </div>
             </article>
-        </main>>
+        </main>
         <section class="branch" id="activities">
             <div class="activities_title">
                 <h2>Activités à Marseille</h2>
